<resources>
    <string name="app_name">NiceStart</string>
    <string name="btn_login_login">Login</string>
    <string name="btn_login_singup">Sing up</string>
    <string name="et_login_password">Password</string>
    <string name="et_login_user">Username</string>
    <string name="iv_login_background">login background image</string>
    <string name="iv_login_logo">app logo</string>
    <string name="iv_singup_background">sing up background image</string>
    <string name="iv_singup_logo">app logo</string>
    <string name="et_singup_passwordconfirm">Confirm password</string>
    <string name="btn_singup_confirm">Confirm</string>
    <string name="btn_singup_cancel">Cancel</string>
    <string name="et_singup_user">Username</string>
    <string name="et_singup_password">Password</string>
    <string name="iv_splash_logo">app logo</string>
    <string name="profile_menu_appbar">Profile</string>
    <string name="settings_menu_appbar">Settings</string>
    <string name="others_menu_appbar">Others</string>
    <string name="iv_main_background">main background image</string>
    <string name="iv_profile_userpic">user picture</string>
    <string name="fab_profile_addpic">add picture</string>
    <string name="context_menu_copy">Copy</string>
    <string name="context_menu_download">Download</string>
    <string name="heart_menu_bottom">Favourite</string>
    <string name="search_menu_bottom">Language</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque molestie dignissim nisl, ut venenatis ex accumsan eget. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque eu ex sed mi tempor lobortis. Etiam quis ipsum eu leo commodo volutpat at et tortor. Nullam accumsan nisl non laoreet vulputate. Etiam viverra non est ac sagittis. Vivamus dictum fermentum varius. Nunc fermentum sodales justo. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.\n\nVestibulum et luctus libero, auctor pharetra ligula. Proin sodales, erat eget laoreet laoreet, massa tortor sodales leo, a feugiat ligula libero at purus. Morbi dictum, risus vel dapibus facilisis, eros metus imperdiet nibh, vitae feugiat tortor leo vitae erat. Ut consequat sapien sed lorem porta ultrices at in velit. Curabitur semper enim et dui lacinia, vitae auctor augue ultricies. Fusce vulputate libero in dictum pellentesque. Donec neque dolor, finibus at sapien id, blandit aliquet ligula. Integer feugiat iaculis nibh, quis egestas velit tincidunt ac. Ut nibh magna, elementum sed ultricies ut, hendrerit nec metus. Duis ac lorem nulla. Proin sollicitudin ex nec rhoncus scelerisque. Duis efficitur ipsum eget dui molestie, vel ornare nunc faucibus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus rhoncus laoreet rhoncus. Morbi vehicula nibh ac laoreet eleifend.\n\nEtiam mauris ex, tristique et leo et, luctus porttitor massa. Praesent aliquet aliquam lorem, in blandit lectus sodales vitae. Morbi nec urna vitae felis tempor lobortis. Fusce in enim rutrum, mollis massa vitae, consectetur enim. Sed molestie ex lectus, sit amet mattis tellus elementum sed. Morbi in ornare sem, ut eleifend mauris. Suspendisse potenti. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec pretium justo malesuada metus gravida bibendum. Etiam nec ante eu arcu auctor facilisis. Cras ultrices enim nec ante rutrum accumsan. Mauris eget sollicitudin lorem. Suspendisse et convallis purus. Morbi eget dui scelerisque leo euismod aliquam vel sit amet lectus. Cras feugiat vehicula sem, quis ullamcorper purus malesuada quis. Curabitur fringilla nibh justo, nec ullamcorper ante blandit a.</string>
    <string name="bab_menu_appbar">bab</string>
</resources>